--- a/src/css/header.css
+++ b/src/css/header.css
@@ -16,3 +16,15 @@
 .header-logo:hover {
 	text-decoration: underline;
 }
+
+.login-button {
+	border: 0;
+	border-radius: 0.25em;
+	padding: 0.5em;
+	background-color: rgb(214, 123, 123);
+	cursor: pointer;
+}
+
+.login-button:hover {
+	background-color: rgb(192, 73, 73);
+}
